--- a/src/app/components/config/config.component.scss
+++ b/src/app/components/config/config.component.scss
@@ -1,19 +1,32 @@
 @import '/src/styles.scss';
 
-.mat-column-show {
-    @include coluna($larg: 5%);
-    text-align: center;
-  }
+.buttonDlg {
+  margin: 5px;
+  width: 20%;
+}
+.buttonSave {
+  margin: 5px;
+  width: 20%;
+  background-color: $verde !important;
+}
+.price {
+  width: 5rem;
+}
 .mat-column-name {
-    @include coluna($larg: 70%);
+    @include coluna($larg: 75%);
   }
 .mat-column-price {
     @include coluna($larg:25%);
     text-align:right;
 }
 .botão {
-  margin: 5px;
-  width: 100%;
+  margin-left: 50px;
   background-color: $verde !important;
+  color: $preto;
 }
-
+mat-form-field {
+  width: 90% !important;
+}
+.dialog {
+  text-align: center;
+}
